LandingPage cards no longer overlap while resizing.

--- a/partyguru_singlepage/src/screens/CreatePartyPage/CreatePartyPage.css
+++ b/partyguru_singlepage/src/screens/CreatePartyPage/CreatePartyPage.css
@@ -7,7 +7,7 @@
 
 .partyguruinfobox {
     color: white;
-    background: rgb(227, 0, 248);
+    background: #8f00e2;
 }
 
 .partyguruinfobox h1{
